--- a/app/src/main/res/layout/adapter_dashboard_inner_item.xml
+++ b/app/src/main/res/layout/adapter_dashboard_inner_item.xml
@@ -71,7 +71,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Inquiry No"
                         android:textColor="@color/colorGray500"
@@ -104,7 +104,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Inquiry Date"
                         android:textColor="@color/colorGray500"
@@ -137,7 +137,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Inquiry Type"
                         android:textColor="@color/colorGray500"
@@ -170,7 +170,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Sub Type"
                         android:textColor="@color/colorGray500"
@@ -203,7 +203,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Proposed Amt."
                         android:textColor="@color/colorGray500"
@@ -236,7 +236,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Frequency"
                         android:textColor="@color/colorGray500"
@@ -269,7 +269,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Lead Type"
                         android:textColor="@color/colorGray500"
@@ -302,7 +302,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Lead Status"
                         android:textColor="@color/colorGray500"
@@ -336,7 +336,41 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Co-Allotted Person"
+                        android:textColor="@color/colorGray500"
+                        android:textSize="@dimen/_11sdp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text=":  " />
+
+                    <TextView
+                        android:id="@+id/txtCoAllottedToName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text=""
+                        android:textColor="@color/colorBlue"
+                        android:textSize="@dimen/_11sdp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_1sdp"
+                    android:layout_marginRight="@dimen/_3sdp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Allotted To Person"
                         android:textColor="@color/colorGray500"
@@ -371,7 +405,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.3"
                         android:fontFamily="@font/poppins_medium"
                         android:text="Allotted By Person"
                         android:textColor="@color/colorGray500"
