--- a/app/src/main/res/layout/adapter_inquiry_item.xml
+++ b/app/src/main/res/layout/adapter_inquiry_item.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/v1"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/color4"/>
+                android:background="@color/color4" />
 
             <LinearLayout
                 android:id="@+id/LLStart"
@@ -55,8 +55,8 @@
                             android:id="@+id/txtInquiryType"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_weight="1"
                             android:fontFamily="@font/poppins_semibold"
                             android:text=""
                             android:textColor="@color/colorBlue"
@@ -66,7 +66,7 @@
                             android:id="@+id/imgMore"
                             android:layout_width="@dimen/_20sdp"
                             android:layout_height="@dimen/_20sdp"
-                            android:src="@drawable/ic_more"/>
+                            android:src="@drawable/ic_more" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -74,14 +74,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Sub-Type :"
+                        android:textColor="@color/colorGray500"
+                        android:textSize="@dimen/_10sdp" />
 
                     <TextView
                         android:id="@+id/txtInquirySubType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Inquiry Sub Type"
+                        android:text=""
                         android:textColor="@color/color2"
                         android:textSize="@dimen/_11sdp" />
                 </LinearLayout>
@@ -105,7 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Mitul Thakkar"
+                        android:text=""
                         android:textColor="@color/color10"
                         android:textSize="@dimen/_10sdp" />
 
@@ -120,41 +129,19 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
                         android:text="Inquiry No :- "
                         android:textColor="@color/colorGray500"
-                        android:textSize="@dimen/_10sdp"
-                        android:fontFamily="@font/poppins_medium"/>
+                        android:textSize="@dimen/_10sdp" />
+
                     <TextView
                         android:id="@+id/txtInquiryNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlue"
-                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/poppins_medium"
                         android:text=""
-                        android:fontFamily="@font/poppins_medium"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Allotted By Person :- "
-                        android:textColor="@color/colorGray500"
-                        android:textSize="@dimen/_10sdp"
-                        android:fontFamily="@font/poppins_medium"/>
-                    <TextView
-                        android:id="@+id/txtAllottedToPerson"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:textColor="@color/colorBlue"
-                        android:textSize="@dimen/_10sdp"
-                        android:text=""
-                        android:fontFamily="@font/poppins_medium"/>
+                        android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
 
                 <View
@@ -189,7 +176,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="10,00,000.00"
+                            android:text=""
                             android:textColor="@color/colorRed"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -222,7 +209,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Yearly"
+                            android:text=""
                             android:textColor="@color/color7"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -253,7 +240,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Hot"
+                            android:text=""
                             android:textColor="@color/color5"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -286,7 +273,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Win"
+                            android:text=""
                             android:textColor="@color/button_green"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -308,18 +295,84 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_medium"
+                            android:text="Allotted By Person :"
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp" />
+
+                        <TextView
+                            android:id="@+id/txtAllottedByPerson"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text=""
+                            android:textColor="@color/colorBlue"
+                            android:textSize="@dimen/_10sdp" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:layout_marginBottom="@dimen/_8sdp"
+                        android:background="@color/colorGray100" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
                             android:text="Allotted To Person :"
                             android:textColor="@color/colorGray500"
                             android:textSize="@dimen/_10sdp" />
 
                         <TextView
-                            android:id="@+id/txtAllottedPerson"
+                            android:id="@+id/txtAllottedToPerson"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Mitul Thakkar"
+                            android:text=""
                             android:textColor="@color/color10"
-                            android:textSize="@dimen/_10sdp"  />
+                            android:textSize="@dimen/_10sdp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="Co Person Allotted :"
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp" />
+
+                        <TextView
+                            android:id="@+id/txtCoAllottedPerson"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:text=""
+                            android:textColor="@color/color1"
+                            android:textSize="@dimen/_10sdp" />
                     </LinearLayout>
 
                     <View
@@ -350,49 +403,52 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Date"
+                            android:text=""
                             android:textColor="@color/color11"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/bg_top_corner"
                 android:layout_marginStart="@dimen/_1sdp"
-                android:layout_marginEnd="@dimen/_1sdp">
+                android:layout_marginEnd="@dimen/_1sdp"
+                android:background="@drawable/bg_top_corner"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/txtEdit"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="EDIT"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:gravity="center"
-                    android:padding="@dimen/_5sdp"/>
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginBottom="@dimen/_2sdp"
-                    android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/txtDelete"
-                    android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Delete"
-                    android:textColor="@color/white"
                     android:fontFamily="@font/poppins_semibold"
                     android:gravity="center"
                     android:padding="@dimen/_5sdp"
-                    android:visibility="gone"/>
+                    android:text="EDIT"
+                    android:textColor="@color/white" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
+                    android:background="@color/white"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/txtDelete"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Delete"
+                    android:textColor="@color/white"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </LinearLayout>
