--- a/app/src/main/res/layout/adapter_lead_item.xml
+++ b/app/src/main/res/layout/adapter_lead_item.xml
@@ -74,14 +74,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Sub-Type :"
+                        android:textColor="@color/colorGray500"
+                        android:textSize="@dimen/_10sdp" />
 
                     <TextView
                         android:id="@+id/txtInquirySubType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Inquiry Sub Type"
+                        android:text=""
                         android:textColor="@color/color2"
                         android:textSize="@dimen/_11sdp" />
                 </LinearLayout>
@@ -105,7 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Mitul Thakkar"
+                        android:text=""
                         android:textColor="@color/color10"
                         android:textSize="@dimen/_10sdp" />
 
@@ -126,29 +135,6 @@
                         android:fontFamily="@font/poppins_medium"/>
                     <TextView
                         android:id="@+id/txtLeadNo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlue"
-                        android:textSize="@dimen/_10sdp"
-                        android:text=""
-                        android:fontFamily="@font/poppins_medium"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Allotted By Person :- "
-                        android:textColor="@color/colorGray500"
-                        android:textSize="@dimen/_10sdp"
-                        android:fontFamily="@font/poppins_medium"/>
-                    <TextView
-                        android:id="@+id/txtAllottedToPerson"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorBlue"
@@ -189,7 +175,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="10,00,000.00"
+                            android:text=""
                             android:textColor="@color/colorRed"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -222,7 +208,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Yearly"
+                            android:text=""
                             android:textColor="@color/color7"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -253,7 +239,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Hot"
+                            android:text=""
                             android:textColor="@color/color5"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -286,7 +272,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Win"
+                            android:text=""
                             android:textColor="@color/button_green"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -317,8 +303,71 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Mitul Thakkar"
+                            android:text=""
                             android:textColor="@color/color10"
+                            android:textSize="@dimen/_10sdp"  />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:layout_marginBottom="@dimen/_8sdp"
+                        android:background="@color/colorGray100" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Allotted By Person :- "
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp"
+                            android:fontFamily="@font/poppins_medium"/>
+                        <TextView
+                            android:id="@+id/txtAllottedToPerson"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlue"
+                            android:textSize="@dimen/_10sdp"
+                            android:text=""
+                            android:fontFamily="@font/poppins_medium"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="Co Person Allotted :"
+                            android:textColor="@color/colorGray500"
+                            android:textSize="@dimen/_10sdp" />
+
+                        <TextView
+                            android:id="@+id/txtCoAllottedPerson"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:text=""
+                            android:textColor="@color/color1"
                             android:textSize="@dimen/_10sdp"  />
                     </LinearLayout>
 
@@ -350,7 +399,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
-                            android:text="Date"
+                            android:text=""
                             android:textColor="@color/color11"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
