--- a/app/src/main/res/layout/adapter_nb_item.xml
+++ b/app/src/main/res/layout/adapter_nb_item.xml
@@ -31,25 +31,17 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/txtClientName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/txtClientName"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.5"
-                            android:fontFamily="@font/poppins_semibold"
-                            android:text=""
-                            android:textColor="@color/button_primary"
-                            android:textSize="@dimen/_12sdp" />
-
-                    </LinearLayout>
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text=""
+                        android:textColor="@color/button_primary"
+                        android:textSize="@dimen/_12sdp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -75,43 +67,20 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_13sdp"
-                            android:layout_gravity="center"
+                            android:layout_width="@dimen/_15sdp"
+                            android:layout_height="@dimen/_15sdp"
+                            android:layout_gravity="center_vertical"
                             android:src="@drawable/ic_call" />
 
                         <TextView
                             android:id="@+id/txtMobileNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/_5sdp"
                             android:fontFamily="@font/poppins_medium"
                             android:gravity="center_vertical"
-                            android:text=""
+                            android:text="sedgsd"
                             android:textColor="@color/colorBlack"
-                            android:textSize="@dimen/_10sdp" />
-
-                        <TextView
-                            android:id="@+id/txtOpen"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_medium"
-                            android:background="@drawable/bg"
-                            android:padding="@dimen/_3sdp"
-                            android:layout_marginLeft="@dimen/_20sdp"
-                            android:text="Open"
-                            android:textColor="@color/colorGray500"
-                            android:textSize="@dimen/_10sdp" />
-
-                        <TextView
-                            android:id="@+id/txtClose"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_medium"
-                            android:background="@drawable/bg"
-                            android:padding="@dimen/_3sdp"
-                            android:layout_marginLeft="@dimen/_20sdp"
-                            android:text="Closed"
-                            android:textColor="@color/colorGray500"
                             android:textSize="@dimen/_10sdp" />
 
                     </LinearLayout>
@@ -129,7 +98,7 @@
                         android:layout_height="0dp"
                         android:layout_alignParentRight="true"
                         android:layout_weight="1"
-                        android:padding="@dimen/_5sdp"
+                        android:padding="@dimen/_6sdp"
                         android:src="@drawable/ic_edit1"
                         android:visibility="visible" />
 
@@ -156,14 +125,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -177,26 +146,19 @@
                         android:id="@+id/txtClientType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
                         android:fontFamily="@font/poppins_semibold"
                         android:text="Existing Client"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_8sdp"
-                    android:background="@color/colorGray100" />
-
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -210,11 +172,47 @@
                         android:id="@+id/txtAllotmentTo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
                         android:fontFamily="@font/poppins_semibold"
                         android:text="Dhruvi Darji"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtOpen"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg"
+                    android:fontFamily="@font/poppins_medium"
+                    android:gravity="center"
+                    android:padding="@dimen/_3sdp"
+                    android:text="Open"
+                    android:textColor="@color/button_green"
+                    android:textSize="@dimen/_10sdp" />
+
+                <TextView
+                    android:id="@+id/txtClose"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg"
+                    android:fontFamily="@font/poppins_medium"
+                    android:gravity="center"
+                    android:padding="@dimen/_3sdp"
+                    android:text="Closed"
+                    android:textColor="@color/colorRed"
+                    android:textSize="@dimen/_10sdp" />
+
             </LinearLayout>
 
         </LinearLayout>
